[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lib-ml"
requires-python = ">=3.11"
authors = [{ name = "Rok Stular", email = "r.stular@student.tudelft.nl" }]
dynamic = ["version"]
dependencies = ["scikit-learn==1.6.1", "nltk==3.9.1"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "lib_ml/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["lib_ml"]

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
